# wallet-app

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.gradle.kts  rust-toolchain.toml  settings.gradle.kts
.github/workflows/: android.yml
androidApp/: build.gradle.kts
androidApp/src/main/: AndroidManifest.xml
androidApp/src/main/java/gg/interstellar/wallet/android/: MainActivity.bak.kt  MainActivity.kt  WalletScreen.kt
androidApp/src/main/java/gg/interstellar/wallet/android/data/: WalletData.kt
androidApp/src/main/java/gg/interstellar/wallet/android/ui/: CommonUi.kt  ComonUi.kt  Components.kt  SendCurrenciesScreen.kt  SwapCurrenciesScreen.kt  TxPinpadScreen.kt
androidApp/src/main/java/gg/interstellar/wallet/android/ui/addresses/: AddressesScreen.kt
androidApp/src/main/java/gg/interstellar/wallet/android/ui/components/: CommonUi.kt  DetailScreen.kt  DetailStatement.kt  Keypad.kt  TabRow.kt  WalletAnimatedCircle.kt  keypad.kt
androidApp/src/main/java/gg/interstellar/wallet/android/ui/market/: MarketScreen.kt
androidApp/src/main/java/gg/interstellar/wallet/android/ui/portfolio/: PortfolioScreen.kt
androidApp/src/main/java/gg/interstellar/wallet/android/ui/profile/: ProfileScreen.kt
androidApp/src/main/java/gg/interstellar/wallet/android/ui/send/: SendScreen.kt
androidApp/src/main/java/gg/interstellar/wallet/android/ui/sendCurrencies/: SendCurrenciesScreen.kt
androidApp/src/main/java/gg/interstellar/wallet/android/ui/star/: StarScreen.kt
androidApp/src/main/java/gg/interstellar/wallet/android/ui/theme/: Color.kt  Shape.kt  Theme.kt  Type.kt
androidApp/src/main/res/drawable/: ic_btc.xml  ic_confirm_transaction_no_text_black_mockup_component_shadow.xml  ic_dot_.xml  ic_eth.xml  ic_interstellar_black_logo.xml  ic_interstellar_launcher_foreground.xml  ic_oneinch.xml  ic_select.xml  ic_sol.xml  ic_tim.xml  ic_undo_black_mockup_component_shadow.xml  ic_uniswap.xml
androidApp/src/main/res/mipmap-anydpi-v26/: Interstellar.xml  ic_interstellar_launcher_round.xml
androidApp/src/main/res/values/: strings.xml  styles.xml  themes.xml
gradle/wrapper/: gradle-wrapper.properties
iosApp/: .gitignore  README.md
iosApp/iosApp/: ContentView.swift  GPUNativeView.swift  HeaderRustWrapper.h  RustWrapper.swift  iOSApp.swift
iosApp/iosApp.xcodeproj/: project.pbxproj
shared/: build.gradle.kts
shared/rust/: .gitignore  Cargo.toml  README.md
shared/rust/TOREMOVE-interstellar-integritee-cli/: Cargo.toml
shared/rust/TOREMOVE-interstellar-integritee-cli/src/: command_utils.rs  direct_client.rs  lib.rs  trusted_commands.rs
shared/rust/TOREMOVE-interstellar-integritee-worker-cli/: Cargo.toml
shared/rust/TOREMOVE-interstellar-integritee-worker-cli/src/: commands.rs  lib.rs  trusted_command_utils.rs  trusted_operation.rs
shared/rust/TOREMOVE-interstellar-integritee-worker-cli/src/trusted_base_cli/: mod.rs
shared/rust/TOREMOVE-interstellar-integritee-worker-cli/src/trusted_base_cli/commands/: interstellar.rs  mod.rs
shared/rust/android-debugging/: README.md  gdbrunner.py  lldbclient.py
shared/rust/app-surface/: Cargo.toml
shared/rust/app-surface/src/: android.rs  app_surface.rs  ios.rs  lib.rs
shared/rust/circuit_evaluate/: Cargo.toml  README.md  build.rs
shared/rust/circuit_evaluate/src/: lib.rs  rust_wrapper.cpp  rust_wrapper.h
shared/rust/circuit_evaluate/src/cpp/evaluate/: evaluate.cpp  evaluate.h
shared/rust/circuit_evaluate/src/cpp/justgarble/: block.h
shared/rust/circuit_evaluate/src/cpp/packmsg/: packmsg.cpp  packmsg.h
shared/rust/circuit_evaluate/src/cpp/parallel_garbled_circuit/: parallel_garbled_circuit.cpp  parallel_garbled_circuit.h
shared/rust/circuit_evaluate/src/cpp/serialize_packmsg/: serialize.cpp  serialize.h
shared/rust/circuit_evaluate/src/cpp/serialize_pgc/: serialize.cpp  serialize.h
shared/rust/common/: Cargo.toml
shared/rust/common/src/: lib.rs
shared/rust/interstellar-integritee-cli/: Cargo.toml  README.md
shared/rust/interstellar-integritee-cli/src/: cli.rs  direct_client.rs  lib.rs  rsa3072.rs  trusted_operation.rs
shared/rust/renderer/: Cargo.toml  build.rs
shared/rust/renderer/data/: transparent_sprite.wgsl
shared/rust/renderer/examples/: 2d_shapes.rs  README.md  desktop.rs
shared/rust/renderer/patch/bevy_render-0.7.0/: Cargo.toml  README_patch.md
shared/rust/renderer/patch/bevy_render-0.7.0/src/camera/: bundle.rs
shared/rust/renderer/patch/bevy_render-0.7.0/src/texture/: mod.rs
shared/rust/renderer/src/: bevy_regular_polygon.rs  c_wrapper.rs  camera.bak.rs  camera.rs  instance.rs  jni_wrapper.rs  lib.rs  lib_sdl2.bak.rs  light.rs  light.wgsl  model.rs  my_raw_window_handle.rs  resources.rs  setup.rs  shader.wgsl  shader_circle.wgsl  shader_circle_instance.wgsl  shader_texture.wgsl  texture.rs  update_texture_placeholder.rs  update_texture_utils.rs  vertices_utils.rs  winit_raw_handle_plugin.rs
shared/rust/src/: c_wrapper.rs  jni_wrapper.rs  lib.rs  loggers.rs
shared/rust/substrate-client/: Cargo.toml
shared/rust/substrate-client/src/: c_wrapper.rs  cli_offline.rs  jni_wrapper.rs  lib.rs  loggers.rs
shared/src/androidMain/: .gitignore  AndroidManifest.xml
shared/src/androidMain/kotlin/gg/interstellar/wallet/: Platform.kt  RustWrapper.kt  WGPUSurfaceView.kt
shared/src/androidMain/res/drawable/: ic_circle_black_background_shadow.xml  ic_confirm_transaction_black_mockup_component_shadow.xml
shared/src/androidMain/resources/lib/x86_64/: TOREMOVE_wrap.sh  wrap.sh
shared/src/androidTest/kotlin/gg/interstellar/wallet/: androidTest.kt
shared/src/commonMain/kotlin/gg/interstellar/wallet/: Greeting.kt  Platform.kt  RustInterface.kt
shared/src/commonTest/kotlin/gg/interstellar/wallet/: commonTest.kt
shared/src/iosMain/kotlin/gg/interstellar/wallet/: Platform.kt
shared/src/iosTest/kotlin/gg/interstellar/wallet/: iosTest.kt
