[workspace]
# needed for wgpu; else:
# error: Metal API enabled on non-Apple OS. If your project is not using resolver="2" in Cargo.toml, it should.
resolver = "2"

members = [
    "circuit_evaluate",
    "common",
    "renderer",
    # "interstellar-integritee-cli",
    "substrate-client",
]

# TODO re-add for bevy 0.9
# NOTE: patch DOES NOT work except at the Workspace level??
# [patch.crates-io]
# bevy_render = { path = './renderer/patch/bevy_render-0.7.0' }

[profile.release-with-debug]
inherits = "release"
debug = true

# https://bevy-cheatbook.github.io/pitfalls/performance.html
# "Enable only a small amount of optimization in debug mode"
[profile.dev]
opt-level = 1

# "Enable high optimizations for dependencies (incl. Bevy), but not for our code:"
[profile.dev.package."*"]
opt-level = 3

################################################################################
# local dev
[patch."https://github.com/apache/teaclave-sgx-sdk.git"]
# itc-rpc-client = { path = "../../../integritee-worker/core/rpc-client/" }
sgx_crypto_helper = { path = "./deps/teaclave-sgx-sdk/sgx_crypto_helper/" }