[workspace]
# needed for wgpu; else:
# error: Metal API enabled on non-Apple OS. If your project is not using resolver="2" in Cargo.toml, it should.
resolver = "2"

members = [
    "circuit_evaluate",
    "common",
    "renderer",
    # "interstellar-integritee-cli",
    # "interstellar-integritee-worker-cli",
    # "deps/integritee-worker/cli",
    "substrate-client",
]

[profile.release-with-debug]
inherits = "release"
debug = true

# https://bevy-cheatbook.github.io/pitfalls/performance.html
# "Enable only a small amount of optimization in debug mode"
[profile.dev]
opt-level = 1

# "Enable high optimizations for dependencies (incl. Bevy), but not for our code:"
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"

[patch."https://github.com/apache/teaclave-sgx-sdk.git"]
# itc-rpc-client = { path = "../../../integritee-worker/core/rpc-client/" }
# TODO ideally we would directly use this patched version from `integritee-cli`
# but it is quite a mess to make it work both from repo `integritee-worker` and here
sgx_crypto_helper = { path = "./deps/teaclave-sgx-sdk/sgx_crypto_helper/" }

[patch.crates-io]
# wasmtime-runtime: we MUST patch to make it compatible with Android Emulator
# ELSE: wasmtime-runtime-1.0.2/src/traphandlers/unix.rs:232:13 compile_error!("unsupported platform");
# SHOULD match https://github.com/paritytech/substrate/blob/master/primitives/wasm-interface/Cargo.toml
# NOTE: we NEED to patch "wasmtime-runtime" but to avoid error like "note: perhaps two different versions of crate `wasmtime_environ` are being used?"
# the easiest thing to do is patch the "main lib"
# NOTE: for the PATCH the work, it MUST be a the correct version(= git tag)
# wasmtime-runtime = { path = "../../../wasmtime/crates/runtime/" }
# wasmtime-environ = { path = "../../../wasmtime/crates/environ/" }
wasmtime = { path = "./deps/wasmtime/crates/wasmtime/" }
# TODO re-add for bevy 0.9? or not needed anymore
# NOTE: patch DOES NOT work except at the Workspace level??
# bevy_render = { path = './renderer/patch/bevy_render-0.7.0' }

################################################################################
# local dev

# [patch."https://github.com/Interstellar-Network/lib-garble-rs.git"]
# lib-garble-rs = { path = "../../../lib-garble-rs/lib-garble-rs/" }

# [patch."https://github.com/Interstellar-Network/integritee-worker.git"]
# integritee-cli = { path = "../../../integritee-worker/cli" }

# [patch."https://github.com/Interstellar-Network/pallets.git"]
# circuits-storage-common = { path = "../../../pallets/circuits-storage-common" }