[package]
name = "interstellar-integritee-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base58 = "0.2"
blake2-rfc = { version = "0.2.18" }
chrono = "*"
clap = { version = "3.1.6", features = ["derive"] }
codec = { version = "3.0.0", package = "parity-scale-codec", features = ["derive"] }
env_logger = "0.9"
hdrhistogram = "7.5.0"
hex = "0.4.2"
log = "0.4"
primitive-types = { version = "0.12.1", features = ["codec"] }
rand = "0.8.5"
rayon = "1.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# NO! cf README for why not!
# https://github.com/apache/incubator-teaclave-sgx-sdk/blob/master/sgx_crypto_helper/Cargo.toml#L15
# sgx_crypto_helper = { branch = "master", git = "https://github.com/apache/teaclave-sgx-sdk.git", default-features = false }
ws = { version = "0.9.1", features = ["ssl"] }

# scs / integritee
# features else:
# error[E0046]: not all trait items implemented, missing: `register_dcap_enclave`, `register_quoting_enclave`
#     --> /home/pratn/.cargo/git/checkouts/integritee-node-c5afc37e7030f6f7/a1d8676/runtime/src/weights/pallet_teerex.rs:30:1
#   30 | impl<T: frame_system::Config> pallet_teerex::WeightInfo for WeightInfo<T> {
#      | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ missing `register_dcap_enclave`, `register_quoting_enclave` in implementation
# my-node-runtime = { package = "integritee-node-runtime", git = "https://github.com/integritee-network/integritee-node.git", branch = "master", default-features = false, features = ["skip-ias-check","skip-extrinsic-filtering"] }
# pallet-evm = { optional = true, git = "https://github.com/integritee-network/frontier.git", branch = "polkadot-v0.9.32" }
substrate-api-client = { features = ["ws-client"], git = "https://github.com/scs/substrate-api-client.git", branch = "polkadot-v0.9.36" }
substrate-client-keystore = { git = "https://github.com/scs/substrate-api-client.git", branch = "polkadot-v0.9.36" }
# teerex-primitives = { git = "https://github.com/integritee-network/pallets.git", branch = "master" }

# substrate dependencies
# frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }
# pallet-balances = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }
# sc-keystore = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36" }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36" }
# sp-keyring = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }
# sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }

# local dependencies
# ita-stf = { git = "https://github.com/Interstellar-Network/integritee-worker.git", branch = "interstellar-M5" }
# itc-rpc-client = { path = "../core/rpc-client" }
itp-node-api = { git = "https://github.com/Interstellar-Network/integritee-worker.git", branch = "interstellar-M5" }
itp-rpc = { git = "https://github.com/Interstellar-Network/integritee-worker.git", branch = "interstellar-M5" }
# itp-sgx-crypto = { git = "https://github.com/Interstellar-Network/integritee-worker.git", branch = "interstellar-M5" }
itp-stf-primitives = { git = "https://github.com/Interstellar-Network/integritee-worker.git", branch = "interstellar-M5" }
# itp-time-utils = { path = "../core-primitives/time-utils" }
itp-types = { git = "https://github.com/Interstellar-Network/integritee-worker.git", branch = "interstellar-M5" }
itp-utils = { git = "https://github.com/Interstellar-Network/integritee-worker.git", branch = "interstellar-M5" }

# https://github.com/apache/incubator-teaclave-sgx-sdk/blob/master/sgx_crypto_helper/Cargo.toml#L44
sgx_types   = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
serde-big-array = { version = "0.4" }
serde_derive = { version = "1"  }

[dev-dependencies]
sp-keyring = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36" }