[package]
name = "circuit-evaluate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib-garble-rs = { git = "https://github.com/Interstellar-Network/lib-garble-rs.git", branch = "initial", default-features = false, features = ["std"] }
rand = { version = "0.8.5", default-features = false, features = ["std", "std_rng"] }

[lib]
name = "circuit_evaluate"
# NOTE: that one is NOT meant to be used as Android library; but linked via crate "renderer"
# so it can be a standard Rust's "lib"
crate-type = ["lib"]

[features]
# TODO(rust) no_std
default = ['std']
std = [
    # 'sp-std/std',
]