[package]
name = "renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# ANDROID: "This must contain at least cdylib for Android libraries to be generated."
# https://github.com/bbqsrc/cargo-ndk/blob/main/example/Cargo.toml
# else:
# [2022-05-16T09:53:58Z INFO  cargo_ndk::cli] Copying libraries to ./jniLibs...
# [2022-05-16T09:53:58Z ERROR cargo_ndk::cli] No .so files found in path
#
# IOS: error: cannot produce cdylib for `shared-rs v0.1.0 (/.../wallet-app/shared/rust)` as the target `x86_64-apple-ios` does not support these crate types
crate-type = ["cdylib", "staticlib", "lib"]

# NOTE cargo-patch: "It's only possible to patch dependencies of binary crates as it is not possible for a subcommand to intercept the build process."
# so we add a "fake bin"
# [[bin]]
# name = "fake-bin"
# test = false
# bench = false

[features]
# TODO if "bevy_winit" is ALSO needed for Android: move it to "dep:bevy" directly
with_winit = ["bevy/bevy_winit", "bevy/x11"]

[dependencies]
ndarray = "0.15.4"
# bevy: removed: "animation",  "bevy_gilrs", "bevy_audio", "vorbis", "png", "hdr", "x11", "filesystem_watcher"
# to avoid dependency on "alsa"(alsa-sys)
# IMPORTANT: DO NOT add direct dep "winit"; it breaks example: the loop runs once and exits immediately
# MUST add either "wayland" or "x11" else
# error: Please select a feature to build for unix: `x11`, `wayland`
#   --> /home/pratn/.cargo/registry/src/github.com-1ecc6299db9ec823/winit-0.26.1/src/platform_impl/linux/mod.rs:10:1
#    |
# 10 | compile_error!("Please select a feature to build for unix: `x11`, `wayland`");
#
# see also "target.'cfg(unix)'.dev-dependencies"
#
# TODO cleanup features; and also in dev-dependencies
bevy = { version = "0.10", default-features = false, features = [
    # https://github.com/bevyengine/bevy/blob/v0.10.0/Cargo.toml#L31
    # "animation",
    "bevy_asset",
    # "bevy_audio",
    # "bevy_gilrs",
    # "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    # "bevy_pbr",
    # "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    # "bevy_text",
    # "bevy_ui",
    # "png",
    # "hdr",
    # "ktx2",
    # "zstd",
    # "vorbis",
    # "x11",
    # "filesystem_watcher",
    # "android_shared_stdcxx",
    # "tonemapping_luts"
 ]}
log = "0.4"
wgpu = "0.15"  # dep of Bevy, but we need it ourself; versions MUST match
# MUST match https://github.com/bevyengine/bevy/blob/bec299fa6e727a59d973fc8ca8f468732d40cb14/crates/bevy_winit/Cargo.toml#L31C1-L31C55
winit = { version = "0.28", default-features = false }

# TODO dev-dependencies?
image = { version = "0.24", default-features = false, features = ["png", "jpeg"]}

#TODO [target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.12"
jni = { version = "0.20" }  # TODO optional = true
jni_fn = "0.1"
raw-window-handle = "0.5"

# local
circuit-evaluate = { path = "../circuit_evaluate" }
common = { path = "../common" }

[dev-dependencies]
png = "0.17.5"
clap = { version = "4", features = ["derive", "env"] }
# features "invocation" needed for tests(to create a JVM)
jni = { version = "0.20", features = ["invocation"] }
# needed only for example/desktop
substrate-client = { path = "../substrate-client" }
# TODO TOREMOVE
lib-garble-rs = { git = "https://github.com/Interstellar-Network/lib-garble-rs.git", branch = "initial", default-features = false, features = ["std"] }

[[example]]
name = "desktop"
required-features = ["with_winit"]